# atc-book

./: .gitignore  CAPABILITIES.md  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.ts
.github/: copilot-instructions.md
.github/workflows/: release-on-main.yml
assets/: main.css
crates/atc-book/: Cargo.toml  DESIGN.md  Dioxus.toml  SPECS.md  VISION.md
crates/atc-book/assets/: main.css
crates/atc-book/src/: aip_doc.rs  airac.rs  i18n.rs  main.rs  models.rs  pdf.rs  state.rs
crates/atc-book/src/adapters/: atis_guru.rs  atlas.rs  mod.rs  sia.rs  sofia.rs  sofia_vac.rs  supaip.rs  uk.rs  workspace_repository_sqlite.rs
crates/atc-book/src/application/: mod.rs  tabs.rs  workspace_windows.rs
crates/atc-book/src/application/ports/: workspace_repository.rs
crates/atc-book/src/components/: layout.rs  mod.rs  navigator.rs  popout.rs  sidebar.rs  status_bar.rs  workspace.rs
crates/atc-book/src/components/workspace/: aip_doc_viewer.rs  atis_viewer.rs  document_view.rs  empty_state.rs  notes_editor.rs  tab_actions.rs  tab_bar.rs  viewer_header.rs
crates/atc-book/src/persistence/: cache.rs  mod.rs  settings.rs  workspaces.rs
crates/vaccfr-book/: SPECS.md
playwright-report/: index.html
src/app/: globals.css  layout.tsx  page.tsx
src/app/help/: page.tsx
src/components/: ChartFilters.tsx  ChartGrid.tsx  ChartViewer.tsx  Dock.tsx  RichTextEditor.tsx  SearchForm.tsx  ThemeProvider.tsx  ThemeToggle.tsx
src/lib/: constants.ts  i18n.ts  utils.ts
src/lib/charts/: index.ts  types.ts
src/types/: index.ts
tests/e2e/: capabilities.spec.ts
(+10 files in other folders)
